# fusion-plus-cosmos

./: .gitignore  Cargo.toml  README.md  architecture.md  foundry.toml  package.json
contracts/: SimpleResolver.sol
contracts/escrow-dst/: Cargo.toml
contracts/escrow-dst/src/: contract.rs  state.rs
contracts/escrow-factory/: Cargo.toml
contracts/escrow-factory/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: escrow_dst.rs  escrow_factory.rs  lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: error.rs  lib.rs  types.rs  utils.rs
scripts/: cross-chain-swap-demo-1inch.js  cross-chain-swap-demo.js  deploy.sh
