[workspace]
members = [
    "contracts/*",
]
resolver = "2"

[workspace.package]
rust-version  = "1.65.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 0
debug = true 
