[package]
name = "escrow-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.4.0", features = ["staking"] }
cosmwasm-schema = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
shared = { path = "../shared" }
interfaces = { path = "../interfaces" }
cw2 = "1.0"
cw-storage-plus = "3.0.1"
hex = "0.4.3"
