[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.4.0", features = ["staking"] }
cosmwasm-schema = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
shared = { path = "../shared" }
