[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-schema = "1.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
sha2 = "0.10"
sha3 = "0.10"
cw-storage-plus = "1.1"

[dev-dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
