[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.2.2", features = ["staking"] }
cosmwasm-schema = "2.2.2"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
schemars = "0.8.20"
thiserror = "1.0.60"
sha2 = "0.10.8"
sha3 = "0.10.8"
cw-storage-plus = "3.0.1"
hex = "0.4.3"
bincode = "1.3.3"

[dev-dependencies]
cosmwasm-std = { version = "2.2.2", features = ["staking"] }
