[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.4.0", features = ["staking", "cosmwasm_1_2"] }
cosmwasm-schema = "1.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
cw-storage-plus = "3.0.1"
hex = "0.4.3"
bincode = "1.3.3"


